# Notification_service

./: .gitignore  Dockerfile  makefile  pyproject.toml
src/: main.py  send_mail.py  settings.py
src/broker/: receiver.py
